feat(pengampu): add basic api pengampu
